--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ psycopg2-binary = "*"
 pillow = "*"
 django-crispy-forms = "*"
 python-decouple = "*"
+django-shapeshifter = "*"
 
 [dev-packages]
 autopep8 = "*"
